[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/fonts/ariblk.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/styles/LoginTextEdits.tres" type="Theme" id=2]
[ext_resource path="res://resources/textures/google-icon.png" type="Texture" id=3]
[ext_resource path="res://resources/styles/BasicButtonPreset.tres" type="Theme" id=4]
[ext_resource path="res://resources/styles/PopupPreset.tres" type="Theme" id=5]
[ext_resource path="res://scripts/Login.gd" type="Script" id=6]
[ext_resource path="res://resources/styles/SmallButtonPreset.tres" type="Theme" id=7]
[ext_resource path="res://resources/audio/Clikc.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 1 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="LoginLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.053
anchor_right = 0.5
anchor_bottom = 0.053
margin_left = -169.0
margin_top = -20.305
margin_right = 169.0
margin_bottom = 19.695
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Login to ClikcerOnline"
align = 1
autowrap = true

[node name="Guest" type="Button" parent="."]
anchor_left = 0.473
anchor_top = 0.123
anchor_right = 0.522
anchor_bottom = 0.123
margin_left = -72.77
margin_top = -20.255
margin_right = 75.22
margin_bottom = 19.745
mouse_default_cursor_shape = 2
theme = ExtResource( 7 )
text = "Continue as Guest"

[node name="EmailLabel" type="Label" parent="."]
anchor_left = 0.392
anchor_top = 0.292
anchor_right = 0.604
anchor_bottom = 0.292
margin_left = -152.08
margin_top = -48.02
margin_right = -201.96
margin_bottom = -25.02
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Email:"

[node name="Email" type="LineEdit" parent="."]
anchor_left = 0.392
anchor_top = 0.298
anchor_right = 0.604
anchor_bottom = 0.298
margin_left = -155.08
margin_top = -28.13
margin_right = 157.04
margin_bottom = 27.87
theme = ExtResource( 2 )
clear_button_enabled = true
placeholder_text = "user@example.com"
caret_blink = true

[node name="PassLabel" type="Label" parent="."]
anchor_left = 0.392
anchor_top = 0.478927
anchor_right = 0.604
anchor_bottom = 0.479
margin_left = -152.08
margin_top = -48.065
margin_right = -163.96
margin_bottom = -25.1151
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Password:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Password" type="LineEdit" parent="."]
anchor_left = 0.392
anchor_top = 0.485
anchor_right = 0.604
anchor_bottom = 0.485
margin_left = -155.08
margin_top = -28.225
margin_right = 157.04
margin_bottom = 27.775
theme = ExtResource( 2 )
secret = true
clear_button_enabled = true
placeholder_text = "Password (Case Sensitive)"
caret_blink = true

[node name="ForgotPass" type="Button" parent="."]
anchor_left = 0.424
anchor_top = 0.613
anchor_right = 0.571
anchor_bottom = 0.613
margin_left = -71.76
margin_top = -35.905
margin_right = 72.21
margin_bottom = 36.0949
mouse_default_cursor_shape = 2
theme = ExtResource( 7 )
text = "Forgot Password?"

[node name="SignInGoogle" type="Button" parent="."]
anchor_left = 0.0326531
anchor_top = 0.70073
anchor_right = 0.967347
anchor_bottom = 0.805839
margin_top = -3.05176e-05
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "Sign In With Google"
icon = ExtResource( 3 )
icon_align = 2
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RegisterButton" type="Button" parent="."]
anchor_left = 0.0326531
anchor_top = 0.829197
anchor_right = 0.5
anchor_bottom = 0.934
margin_right = -13.0002
margin_bottom = 0.210266
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "Register"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LoginButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.829197
anchor_right = 0.967347
anchor_bottom = 0.934
margin_left = 13.0002
margin_bottom = 0.210266
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GoogleLoginPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -256.0
margin_right = 196.0
margin_bottom = 256.0
theme = ExtResource( 5 )
popup_exclusive = true
window_title = "Sign In With Google"

[node name="HelpLabel" type="Label" parent="GoogleLoginPopup"]
anchor_left = 0.059
anchor_top = 0.035
anchor_right = 0.936
anchor_bottom = 0.428
margin_left = -0.128
margin_top = 0.0799999
margin_right = 0.0880127
margin_bottom = -0.136017
text = "Signing in with Google is very simple. It's gonna give you an authentication code and you'll input it into the box below. Once you've input it, click sign in and it will sign you in. :)"
align = 1
autowrap = true

[node name="GetAuthCode" type="Button" parent="GoogleLoginPopup"]
anchor_left = 0.303571
anchor_top = 0.44043
anchor_right = 0.691327
anchor_bottom = 0.53418
margin_left = 0.999992
margin_right = 1.0
mouse_default_cursor_shape = 2
text = "Get Auth Code"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AuthCode" type="LineEdit" parent="GoogleLoginPopup"]
anchor_left = 0.122
anchor_top = 0.597
anchor_right = 0.878
anchor_bottom = 0.737
margin_left = 0.175999
margin_top = -0.164001
margin_right = -0.175995
margin_bottom = 0.155975
theme = ExtResource( 2 )
align = 1
placeholder_text = "Auth Code"

[node name="SignIn" type="Button" parent="GoogleLoginPopup"]
anchor_left = 0.19
anchor_top = 0.8
anchor_right = 0.81
anchor_bottom = 0.948
margin_left = 0.0199966
margin_top = -0.100006
margin_right = -0.0200195
margin_bottom = 0.123962
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "Sign In"

[node name="ForgotPassWindow" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -128.5
margin_right = 196.0
margin_bottom = 128.5
theme = ExtResource( 5 )
popup_exclusive = true
window_title = "Forgot Password"

[node name="EmailLabel" type="Label" parent="ForgotPassWindow"]
anchor_left = 0.406
anchor_top = 0.266
anchor_right = 0.569
anchor_bottom = 0.266
margin_left = -88.152
margin_top = -39.884
margin_right = -104.048
margin_bottom = -18.884
text = "Email:"

[node name="Email" type="LineEdit" parent="ForgotPassWindow"]
anchor_left = 0.406
anchor_top = 0.281
anchor_right = 0.569
anchor_bottom = 0.281
margin_left = -96.152
margin_top = -19.994
margin_right = 95.952
margin_bottom = 20.006
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
align = 1
placeholder_text = "email@example.com"
caret_blink = true

[node name="ResetPass" type="Button" parent="ForgotPassWindow"]
anchor_left = 0.406
anchor_top = 0.617
anchor_right = 0.548
anchor_bottom = 0.617
margin_left = -64.152
margin_top = -32.058
margin_right = 72.184
margin_bottom = 31.942
mouse_default_cursor_shape = 2
text = "Send Reset Pass Link"

[node name="GuestPrompt" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -280.0
margin_right = 208.0
margin_bottom = 280.0
theme = ExtResource( 5 )
popup_exclusive = true
window_title = "PLEASE NOTE"

[node name="Warning" type="Label" parent="GuestPrompt"]
anchor_top = 0.061
anchor_right = 1.0
anchor_bottom = 0.846
margin_top = -0.160004
margin_bottom = 1.23999
text = "MOST THINGS SPECIFIED HERE AREN'T MADE YET AND WON'T AFFECT YOUR YET UNTIL IMPLEMENTED

Using Guest mode will only allow for local saves and you won't be able to access public leaderboards. Signing in is reccomended if you want access to these features listed below:

* Public Leaderboards
* Cross platform saves
* And other online features

Options that are online only will be disabled if you continue with the button below."
align = 1
autowrap = true

[node name="Accept" type="Button" parent="GuestPrompt"]
anchor_left = 0.123
anchor_top = 0.861
anchor_right = 0.892
anchor_bottom = 0.977
margin_left = -0.168003
margin_top = -0.160034
margin_right = -0.0720215
margin_bottom = -0.120056
mouse_default_cursor_shape = 2
text = "Accept & Continue"

[node name="ClikcerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="Guest" to="." method="_on_Guest_pressed"]
[connection signal="pressed" from="ForgotPass" to="." method="_on_ForgotPass_pressed"]
[connection signal="pressed" from="SignInGoogle" to="." method="_on_SignInGoogle_pressed"]
[connection signal="pressed" from="RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="GoogleLoginPopup/GetAuthCode" to="." method="_on_GetAuthCode_pressed"]
[connection signal="pressed" from="GoogleLoginPopup/SignIn" to="." method="_on_SignIn_pressed"]
[connection signal="pressed" from="ForgotPassWindow/ResetPass" to="." method="_on_ResetPass_pressed"]
[connection signal="pressed" from="GuestPrompt/Accept" to="." method="_on_Accept_pressed"]
